# gimp-mcp

./: .gitignore  CLAUDE.md  LEARNINGS.md  README.md  gimp-mcp-plugin.py  pyproject.toml
