[build-system]
requires = ["setuptools>=77.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gimp-mcp"
version = "0.1.0"
description = "GIMP MCP integration for external control of GIMP 3.2"
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = [
    "mcp",
    "fastmcp",
]

[project.scripts]
gimp-mcp-server = "gimp_mcp_server:main"

[tool.setuptools]
py-modules = ["gimp_mcp_server"]

[tool.ruff.lint.per-file-ignores]
"gimp-mcp-plugin.py" = ["E402"]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
]
